--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   </head>
   <body>
+      <h1>Fireworks</h1>
+      <h3>나랑 불꽃놀이 보러 가지 않을래?</h3>
+      <p>2021년 9월 여의도 한강공원에서 만나.</p>
     <script src="sketch.js"></script>
   
 
